static 파일이 추가되지 않는 문제 해결

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,2 @@
-include bottle.py
-include git_object.py
-include index.py
-include main.py
-recursive-include views *
+include gistory/test.tpl
+recursive-include gistory/views *
